tutorials-and-examples/langchain-chatbot/chat-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: chat
  namespace: langchain-chatbot
spec:
  template:
    spec:
      containers:
        - name: app
          image: <image-name>:latest
          imagePullPolicy: Always
          env:
            - name: MODEL_BASE_URL
              value: "http://gemma2.langchain-chatbot.svc.cluster.local/openai/v1/"
            - name: MODEL_NAME
              value: "gemma2"
            - name: REDIS_CONN_STRING
              value: redis://<redis-ip-address>:6379
          ports:
            - containerPort: 8501
          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 745Mi
