tutorials-and-examples/langchain-chatbot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
